--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -1,12 +1,12 @@
 // First override some or all individual color variables
-$primary: #25408f;
-$secondary: #8f5325;
-$success: #3e8d63;
-$info: #13101c;
+$primary: #f77b07;
+$secondary: #6e6d6c;
+$success: #00ddff;
+$info: #3298ff;
 $warning: #945707;
 $danger: #d62518;
 $light: #f8f9fa;
-$dark: #343a40;
+$dark: #000000;
 
 // Then add them to your custom theme-colors map, together with any additional colors you might need
 $theme-colors: (
