I have done it !!!, stripe works live

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -22,3 +22,7 @@ $theme-colors: (
 );
 
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss';
+
+.alert-hover:hover{
+	border: 2px solid black;
+}
